# Reycode2

./: .gitmodules  CMakeLists.txt
reycode/: CMakeLists.txt
reycode/src/reycode/: reycode.cpp  reycode.h
reycode/src/reycode/compute/: blas.cpp  blas.h  compute.h
reycode/src/reycode/compute/cuda/: compute.h
reycode/src/reycode/mesh/: hexcore.h  mesh.cpp  mesh.h  mixed_mesh.h  polymesh.h
reycode/src/reycode/mesh/detail/: cube.h
reycode_graphics/: CMakeLists.txt
reycode_graphics/src/reycode_graphics/: scene.h
reycode_graphics/src/reycode_graphics/rhi/: draw.cpp  draw.h  rhi.h  shader.cpp  shader.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
reycode_graphics/src/reycode_graphics/rhi/CUDA/: vertex_buffer.cpp  vertex_buffer.h
reycode_meshing/: CMakeLists.txt
reycode_meshing/src/reycode_meshing/: hexcore.cpp  hexcore.h
reycode_solver/: CMakeLists.txt
reycode_solver/src/reycode_solver/: linear_solver.cpp  linear_solver.h  solver.cpp
reycode_solver/src/reycode_solver/field/: field.h
reycode_solver/src/reycode_solver/fv/: bc.h  fv.h  fvc.h  fvm.h
reycode_solver/src/reycode_solver/linear_solver/: linear_solver.cpp  linear_solver.h
reycode_viewer/: CMakeLists.txt
reycode_viewer/src/reycode_viewer/: colormap.cpp  colormap.h  fpv.cpp  fpv.h  main.cpp  mesh.h  mesh_viewer.cpp  mesh_viewer.h
